# icon-changer

./: CMakeLists.txt
src/: bitmap.cpp  bitmap.hpp  icon.cpp  icon.hpp
tests/: CMakeLists.txt
tests/unit/: bitmap_test.cpp  icon_test.cpp
